Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.3.0
-
Fix Version/s: 6.2.5, 6.4.0 Beta1, 6.5.0 Beta1
-
Component/s: Build System: CMake, Build tools: androiddeployqt, Conan
-
Labels:
-
Environment:Linux/Ubuntu20
-
Commits:0c82f98ec5 (qt/qtbase/dev) 0c82f98ec5 (qt/tqtc-qtbase/dev) 62ca8ae0a6 (qt/qtbase/6.3) d3bbbf345a (qt/qtbase/6.4) 62ca8ae0a6 (qt/tqtc-qtbase/6.3) d3bbbf345a (qt/tqtc-qtbase/6.4) 247693f341 (qt/tqtc-qtbase/6.2)
Description
- conan install qtbuildprofiles/6.3.1-alpha1@qt/everywhere -r qt-staging
- mkdir host && cd host
- conan install qtdeclarative/6.3.1-alpha1@qt/everywhere --profile ../linux-x86_64-gcc --update --build=never --generator=virtualenv -r qt-staging
- mkdir target && cd target
- conan install qtdeclarative/6.3.1-alpha1@qt/everywhere --profile ../unix-android-x86_64-clang --update --build=never -r qt-staging --generator=virtualenv -o qtbase:qt_host_path=/home/iikka/test_build/host/ -o *:android_ndk_version=r22b -o *:android_sdk_version=31
- cd ../host && source activate.sh
- cd ../target && source activate.sh
- cd ~/qt5/qtsvg/examples/svg/svgviewer
- qt-cmake CMakeLists.txt
- make
- qmlimportscanner: No such file or directory: "/.data/qtbase/6.3.1-alpha1/qt/everywhere/package/021c83c0a3c6a385e4cfa91ed9a0172e1bcc0a8d/qml"
interestingly, if I only "conan install qtsvg" for android and activate the corresponding virtualenv, then I can compile the svgviewer for android despite I can see the same error in the logs:
"Error: qmlimportscanner not found at /home/iikka/build/host/./libexec/qmlimportscanner"